# DotX

./: .gitignore  BUILDING.md  CHANGELOG.md  Cargo.toml  Makefile  PROJECT_STRUCTURE.md  README.md  RELEASE.md  plan.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: build-release.yml
bench/: README.md
cli/: Cargo.toml
cli/src/: config.rs  deterministic.rs  error.rs  main.rs
cli/src/commands/: gui.rs  import.rs  map.rs  mod.rs  refine.rs  render.rs
core/: Cargo.toml
core/benches/: suffix_array.rs  tiling.rs
core/src/: alignment.rs  coords.rs  dotxdb.rs  fasta.rs  lib.rs  serialization.rs  tiles.rs  types.rs
core/src/io/: fasta.rs  maf.rs  mod.rs  mummer.rs  paf.rs  sam.rs
core/src/seed/: syncmer.rs
core/tests/: integration_test.rs
data/: README.md
docs/: INSTALL.md  README.md  UX.md
dotx-cli/: Cargo.toml
dotx-cli/src/: main.rs
dotx-core/: Cargo.toml
dotx-core/benches/: seeding_benchmarks.rs
dotx-core/examples/: seeding_demo.rs
dotx-core/src/: alignment.rs  annotation.rs  chain.rs  coords.rs  dot.rs  dotx.rs  fasta.rs  lib.rs  mask.rs  paf.rs  store.rs  tiles.rs  types.rs  verify.rs
dotx-core/src/io/: fasta.rs  maf.rs  mod.rs  mummer.rs  paf.rs  sam.rs
dotx-core/src/seed/: kmer.rs  minimap2.rs  mod.rs  strobemer.rs  syncmer.rs  tests.rs  utils.rs
dotx-core/tests/: anchors_roundtrip.rs  sam_min.rs
dotx-gpu/: Cargo.toml
dotx-gpu/src/: compute.rs  lib.rs  lod.rs  pipeline.rs  preview.rs  render.rs  tiling.rs  vector_export.rs
dotx-gpu/src/shaders/: density_heatmap.wgsl  instanced_points.wgsl  mod.rs  polyline.wgsl  tile_builder.wgsl  transform_utils.wgsl  vertex_common.wgsl
dotx-gpu/tests/: determinism_svg.rs  pdf_metadata.rs  pdf_parity.rs  png_histogram.rs
dotx-gui/: Cargo.toml  index.html  package.json  tauri.conf.json  tsconfig.json  vite.config.ts
dotx-gui/src/: App.tsx  index.css  main.rs
dotx-gui/src/components/: MiniMap.tsx  PlotCanvas.tsx  TopBar.tsx
dotx-gui/src/types/: index.ts
installer/: DotX.wxs  build-installer.bat
packaging/debian/: control  copyright  postinst  postrm  prerm
packaging/linux/: dotx.desktop  dotx.xml
python/: README.md
render/: Cargo.toml
scripts/: README.md  build-deb.sh  build-windows.ps1  install.sh
ui/: README.md
