[workspace]
members = [
    "dotx-core",
    "dotx-gui", 
    "dotx-cli",
    "dotx-gpu",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["DotX Development Team"]
license = "Apache-2.0"
homepage = "https://github.com/machinelearning-guy/DotX"
repository = "https://github.com/machinelearning-guy/DotX"
description = "Extreme-scale dot plot visualization for bioinformatics"
keywords = ["bioinformatics", "genomics", "visualization", "alignment", "dotplot"]
categories = ["science", "visualization", "command-line-utilities"]

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
rayon = "1.8"

# File I/O and compression
zstd = "0.13"
flate2 = "1.0"
zip = "2.2"
memmap2 = "0.9"

# Database and indexing
lmdb-rkv = "0.14"
parquet = "53.0"

# Math and algorithms
bytemuck = { version = "1.14", features = ["derive"] }
morton-encoding = "2.0"
xxhash-rust = { version = "0.8", features = ["xxh64"] }

# Graphics and UI
egui = "0.29"
eframe = { version = "0.29", features = ["wgpu"] }
wgpu = "0.20"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Testing
criterion = "0.5"

# Additional dependencies
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2.1"
which = "6.0"
pollster = "0.3"

# GUI-specific dependencies
rfd = "0.14"
image = "0.25"

