[workspace]
members = [
    "dotx-core",
    "dotx-gpu",
    "cli",
    # GUI app can be added later as it requires Node/Tauri
]
exclude = [
    "dotx-gui",
    "ui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["DOTx Contributors"]
repository = "https://github.com/yourusername/dotx"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
bytemuck = { version = "1.14", features = ["derive"] }
