[package]
name = "dotx-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Command-line interface for genome analysis and dot plot generation"

[[bin]]
name = "dotx"
path = "src/main.rs"

[dependencies]
dotx-core = { path = "../dotx-core" }
dotx-gpu = { path = "../dotx-gpu" }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17"
env_logger = "0.11"
toml = "0.8"
thiserror = "1.0"
rayon = "1.8"
num_cpus = "1.16"
tempfile = "3.8"

# Additional CLI-specific dependencies
tokio = { version = "1.35", features = ["full"] }
crossterm = "0.27"
tui = "0.19"
dirs = "5.0"

[dev-dependencies]

[features]
default = ["render", "import", "gui"]
render = []
import = []
map = []
refine = []
gui = []
pdf = ["dotx-gpu/printpdf"]
