[package]
name = "dotx-core"
version = "0.1.0"
edition = "2021"
authors = ["DOTx Contributors"]
description = "Core library for DOTx - sequence alignment and dot plot generation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/dotx"

[dependencies]
thiserror = "1.0"
tempfile = "3.0"
rand = { version = "0.8", features = ["std_rng"] }
# File format parsing dependencies
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
needletail = "0.5"
noodles = { version = "0.75", features = ["sam", "bam", "bgzf"], optional = true }
regex = "1.10"
flate2 = "1.0"
# Binary store dependencies
byteorder = "1.5"
zstd = "0.13"
memmap2 = "0.9"
# Alignment and chaining dependencies  
bio = "1.6"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "seeding_benchmarks"
harness = false

[features]
default = ["io-paf"]
io-paf = []
io-mummer = []
io-sam = ["noodles"]
io-maf = []
io-fasta = []
seed = []
mask = []
dot = []
verify = []

[[example]]
name = "seeding_demo"
path = "examples/seeding_demo.rs"
required-features = ["seed"]
