[package]
name = "dotx-gui"
version = "0.1.0"
edition = "2021"
authors = ["DotX Team"]
description = "Desktop GUI for DotX dot plot visualization using Tauri + React"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
dotx-core = { path = "../dotx-core" }
dotx-gpu = { path = "../dotx-gpu" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.5", features = ["api-all"] }
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
pdf = ["dotx-gpu/printpdf"]

[[bin]]
name = "dotx-gui"
path = "src/main.rs"
